--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,19 @@
 spring:
-    datasource:
-        driver-class-name: org.postgresql.Driver
-        username: postgres
-        password: HateYou1
-        url: jdbc:postgresql://localhost:5432/muswebappSpring
-        hikari:
-            maximum-pool-size: 20
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-        properties:
-            hibernate:
-                format_sql: true
+  datasource:
+    username: postgres
+    password: HateYou1
+    url: jdbc:postgresql://localhost:5432/muswebappSpring
+    hikari:
+      maximum-pool-size: 20
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+logging:
+  level:
+    org.hibernate:
+      SQL: trace
+      orm.jdbc.bind: trace
